# server

./: .gitmodules  About_8h_source.html  AbstractAsyncWork_8h_source.html  AbstractConfigurationQueryLoader_8h_source.html  AbstractGatewayDao_8h_source.html  AbstractModule_8h_source.html  AbstractOAuth2Provider_8h_source.html  AbstractServer_8h_source.html  AbstractXmlHandler_8h_source.html  AccessLevel_8h_source.html  AnyAsyncWork_8h_source.html  AnyXmlHandler_8h_source.html  ApiKeyAuthProvider_8h_source.html  ApplicationConfigurationLoader_8h_source.html  ArgsParser_8h_source.html  AsyncExecutor_8h_source.html  AsyncGatewayRPC_8h_source.html  AsyncWork_8h_source.html  AuthProvider_8h_source.html  AuthRestHandler_8h_source.html  AuthServiceImpl_8h_source.html  AuthService_8h_source.html  AuthXmlHandler_8h_source.html  AutoClose_8h_source.html  AutoConfigurationExplorer_8h_source.html  BackOff_8h_source.html  Backtrace_8h_source.html  Base64_8h_source.html  BitmapInfo_8h_source.html  BitmapsSAXHandler_8h_source.html  BlockingAsyncWork_8h_source.html  BuiltinRestHandler_8h_source.html  CMakeLists.txt  CONTRIBUTORS.md  CORSFilter_8h_source.html  CPSPRestHandler_8h_source.html  CancellableSet_8h_source.html  Cancellable_8h_source.html  CassandraStartup_8h_source.html  Castable_8h_source.html  (+1142 more)
baf/: .gitignore  CMakeLists.txt  Makefile_ant2  Makefile_local  compile.sh  config_local.xml  tasks_config_ant2.xml
baf/demo/: alive-change.json  alive-create.json  fire-create.json  fire-delete.json  watchdog-change.json  watchdog-create-both.json  watchdog-create-notif.json  watchdog-delete.json  watchdog-get-inst.json
baf/json/: alive-create.json  alive-get-data.json  alive-get-inst.json  alive-off.json  alive-on.json  test.sh  watchdog-delete.json  watchdog-get-data.json
baf/nbproject/: Makefile-variables.mk  Package-Debug.bash  configurations.xml  project.xml
baf/src/: BaseTaskLoader.cpp  BaseTaskLoader.h  BaseTaskManager.cpp  BaseTaskManager.h  CMakeLists.txt  Calendar.cpp  Calendar.h  CombinedTaskInstance.cpp  CombinedTaskInstance.h  Config.h  ConfigParser.cpp  ConfigParser.h  DataMessage.h  DataMessageParser.cpp  DataMessageParser.h  DataMessageRegister.cpp  DataMessageRegister.h  DatabaseInterface.cpp  DatabaseInterface.h  GatewayInterface.cpp  GatewayInterface.h  GatewayServer.cpp  GatewayServer.h  GatewaySession.cpp  GatewaySession.h  Logger.h  Server.cpp  Server.h  Task.cpp  Task.h  TaskInstance.cpp  TaskInstance.h  TaskLoader.cpp  TaskLoader.h  TaskManager.cpp  TaskManager.h  TimedTaskInstance.cpp  TimedTaskInstance.h  TriggerTaskInstance.cpp  TriggerTaskInstance.h  (+12 more)
server/: .gitignore  CMakeLists.txt
server/base/: CMakeLists.txt
server/conf/: devices.xml  factory.xml  gws-startup.ini  logging.ini  restui-api.ini  restui-startup.ini  server-startup.ini  server.ini  services.xml  testing-startup.ini  types.xml  xmlui-startup.ini
server/doc/: Doxyfile.in  install.md  mainpage.md
server/dtd/: types.dtd
server/schema/: CMakeLists.txt  README  database.dtd  home8-init.sql  home8-query.xml  home8.xml  query-set.dtd
server/src/: CMakeLists.txt  Debug.h  logging.ini  main.cpp
server/t/: README  README.md  devices.xml  facebook.py  google-oauth2.py  google.py  oauth2.py  rest.py  t0000-selftest.py  t0001-no-content-length.py  testing-data.sql  xmlui.py
server/test/: CMakeLists.txt  SkippableAutoRegisterSuite.h  logging.ini  test.cpp
server/tools/: Makefile  server-testing-start.sh
src/: CMakeLists.txt
src/baf/: EventPublisher.cpp  EventPublisher.h  GatewayWatcher.cpp  GatewayWatcher.h  PublishingWatcher.cpp  PublishingWatcher.h
src/cassandra/: CassandraStartup.cpp  CassandraStartup.h
src/dao/: AbstractConfigurationQueryLoader.cpp  AbstractConfigurationQueryLoader.h  AbstractGatewayDao.cpp  AbstractGatewayDao.h  ConnectorLoader.cpp  ConnectorLoader.h  ControlDao.cpp  ControlDao.h  DeviceDao.cpp  DeviceDao.h  DevicePropertyDao.cpp  DevicePropertyDao.h  EntityLoader.h  FCMRecipientsDao.cpp  FCMRecipientsDao.h  FCMTokenDao.cpp  FCMTokenDao.h  FilesystemQueryLoader.cpp  FilesystemQueryLoader.h  GatewayDao.h  GatewayMessageDao.cpp  GatewayMessageDao.h  GatewayStatusDao.cpp  GatewayStatusDao.h  IdentityDao.cpp  IdentityDao.h  IniFileQueryLoader.cpp  IniFileQueryLoader.h  LocationDao.h  LoggingQueryProfiler.cpp  LoggingQueryProfiler.h  MockDao.h  Query.cpp  Query.h  QueryLoader.cpp  QueryLoader.h  QueryProfiler.cpp  QueryProfiler.h  RoleInGatewayDao.h  SQLQuery.cpp  (+4 more)
src/fcm/: FCMClient.cpp  FCMClient.h  FCMMessage.cpp  FCMMessage.h  FCMReceiverConfigurable.cpp  FCMReceiverConfigurable.h  FCMResponse.cpp  FCMResponse.h  FCMSender.cpp  FCMSender.h  LegacyFCMClient.cpp  LegacyFCMClient.h
src/gws/: ControlChangeHandler.cpp  ControlChangeHandler.h  DeviceListener.cpp  DeviceListener.h  DevicePairHandler.cpp  DevicePairHandler.h  DeviceUnpairHandler.cpp  DeviceUnpairHandler.h  GWMessageHandler.cpp  GWMessageHandler.h  GWMessageHandlerImpl.cpp  GWMessageHandlerImpl.h  GWRequestHandler.cpp  GWRequestHandler.h  GWResponseExpectedQueue.cpp  GWResponseExpectedQueue.h  GatewayCommunicator.cpp  GatewayCommunicator.h  GatewayConnection.cpp  GatewayConnection.h  GatewayListener.cpp  GatewayListener.h  GatewayPeerVerifier.cpp  GatewayPeerVerifier.h  GatewayScanController.cpp  GatewayScanController.h  RPCForwarder.h  RelaxedGatewayPeerVerifier.cpp  RelaxedGatewayPeerVerifier.h  SensorDataListener.cpp  SensorDataListener.h  SocketGatewayPeerVerifierFactory.cpp  SocketGatewayPeerVerifierFactory.h  WebSocketRequestHandler.cpp  WebSocketRequestHandler.h  WebSocketServer.cpp  WebSocketServer.h  X509GatewayPeerVerifier.cpp  X509GatewayPeerVerifier.h
src/jwt/: JWTDecoder.cpp  JWTDecoder.h  JWTEncoder.cpp  JWTEncoder.h  JWToken.cpp  JWToken.h
src/l10n/: HTTPLocaleExtractor.cpp  HTTPLocaleExtractor.h  IcuLocaleImpl.h  IcuLocaleManager.cpp  IcuLocaleManager.h  IcuTimeZoneImpl.cpp  IcuTimeZoneImpl.h  IcuTimeZoneProvider.cpp  IcuTimeZoneProvider.h  IcuTranslator.cpp  IcuTranslator.h  TimeZone.h  TimeZoneImpl.cpp  TimeZoneImpl.h  TimeZoneProvider.h
test/: CMakeLists.txt
(+3538 files in other folders)
